# TemplatesPages

./: LICENSE  README.md
TemplateOne-Studio/: .env  .gitignore  Dockerfile  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
TemplateOne-Studio/SiteSetup/: admin.py  apps.py  context_processors.py  models.py
TemplateOne-Studio/SiteSetup/migrations/: 0001_initial.py  0002_navbarlink_is_external.py  0003_sitesettings_show_procediments_section.py  0004_remove_sitesettings_show_equipaments_section_and_more.py
TemplateOne-Studio/home/: admin.py  models.py  urls.py
TemplateOne-Studio/home/migrations/: 0001_initial.py  0002_alter_herosection_options_alter_herosection2_options_and_more.py  0003_herosection3_herosection4.py  0004_procediment.py  0005_aboutthings_tag_galery_tag.py  0006_procediment_price.py  0007_delete_equipment.py  0008_about_us_galleryimage_gallerytag_hero_section5_and_more.py  0009_remove_metrics_image.py
TemplateOne-Studio/home/views/: About.py  Galery.py  Home.py  Procediments.py  __init__.py
TemplateOne-Studio/static/css/: main.css  remedy.css
TemplateOne-Studio/static/js/: ScrolledGallery.js  procediments.js  scrolled.js  scrolledActiveSection.js  swiper.js
TemplateOne-Studio/staticfiles/css/: main.css  untils.css
TemplateOne-Studio/staticfiles/js/: equipaments_slider.js  procediments.js
TemplateOne-Studio/template_one/: asgi.py  settings.py  urls.py  wsgi.py
TemplateOne-Studio/templates/: about.html  galery.html  home.html  procediments.html
TemplateOne-Studio/templates/partials/: base.html  footer.html  (+1 more)
(+45 files in other folders)
