[project]
name = "templateone-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "markdown>=3.8.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
]
